# claudeRouter

./: .gitignore  CLAUDE.md  README.md  config.example.toml  install.sh  pyproject.toml
.claude/: settings.json
dev/plans/2026-06-12-bugfix-thinking-signature-field-required/: plan.md
dev/plans/2026-06-12-traffic-dashboard/: plan.md
dev/plans/2026-06-12-traffic-dashboard/fixtures/: traffic.json
dev/plans/2026-06-12-traffic-dashboard/tickets/: 01-traffic-log-storage.md  02-session-resolver.md  03-dashboard-ui.md  04-router-instrumentation.md  05-server-wiring-endpoint.md
docs/: thinking-block-sterilization.md
shell/: claudeRouter.sh
src/clauderouter/: __main__.py  config.py  health.py  providers.py  router.py  server.py  sessions.py  traffic_log.py
src/clauderouter/static/: dashboard.html
systemd/: claudeRouter.service
tests/: test_dashboard_endpoint.py  test_dashboard_static.py  test_health_deep_probe.py  test_max_tokens_clamp.py  test_model_prefixes.py  test_provider_auth.py  test_provider_observability.py  test_response_thinking_sterilization.py  test_router_logging.py  test_sessions.py  test_thinking_signature.py  test_traffic_log.py
